HTML: Better class name for Hotels, cards, make the a invisible inside the card. CSS: Rename, rework hotels for desktop, bugfix wip

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,18 +272,23 @@ main {
 }
 
 /* =========================
-    Hotels
+    Hotels - Main
    ========================= */
-.hotels {
+.main-hotels {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   background-color: transparent;
 }
 
+/* =========================
+    Hotels - Containers
+   ========================= */
+
 .hotels-offers,
 .hotels-popular {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   border-radius: 1.3rem;
   padding: 2rem;
@@ -291,37 +296,13 @@ main {
   background-color: var(--main-bg-color);
 }
 
-.hotels-offers {
-  width: 871px;
-  align-content: flex-start;
-}
-
-.hotels-popular {
-  width: 429px;
-}
-
-.hotels-grids {
-  gap: 25px;
-}
-
-.offers-grids {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.popular-grids {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-}
-
-.hotels-title {
+.hotel-title {
   background-color: transparent;
 }
 
 .offers-button {
-  font-size: 18px;
   display: flex;
+  font-size: 18px;
   cursor: pointer;
   border: none;
   background: none;
@@ -330,11 +311,55 @@ main {
 }
 
 /* =========================
-    Hotels - Offers - Card
+    Hotels - Section - Offers
+   ========================= */
+
+.hotels-offers {
+  width: 871px;
+  align-content: flex-start;
+}
+
+/* =========================
+    Hotels - Section - Popular
+   ========================= */
+
+.hotels-popular {
+  width: 429px;
+}
+
+/* =========================
+    Cards - Main
+   ========================= */
+
+.cards-offers,
+.cards-popular {
+  gap: 25px;
+}
+
+/* =========================
+    Cards - Offers
+   ========================= */
+
+.cards-offers {
+  display: grid;
+  flex-wrap: wrap;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+/* =========================
+    Cards - Popular
+   ========================= */
+
+.cards-popular {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+/* =========================
+    Cards - Single Card
    ========================= */
 .card {
-  display: flex;
-  flex-direction: column;
   overflow: hidden;
   border-radius: 1.3rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -342,30 +367,89 @@ main {
   background: var(--color-white);
 }
 
-.card:hover {
-  transform: translateY(-5px);
+.card a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
 }
 
-.hotel-image {
-  width: 100%;
-  height: 124px;
+.card-link {
+  position: relative;
+  z-index: 2;
+}
+
+/* =========================
+    Single Card - Offers - Container
+   ========================= */
+.card-offers {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+/* =========================
+    Single Card - Popular - Container
+  ========================= */
+.card-popular {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+}
+
+/* =========================
+    Single Card - Image - Main
+   ========================= */
+
+.card-image {
+  width: 120px;
+  height: 120px;
+  border-radius: 1rem 0 0 1rem;
+  margin-right: 1rem;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   border: 5px solid var(--color-white);
   background-color: transparent;
 }
 
+/* =========================
+    Single Card - Image - Offers
+   ========================= */
+.image-offers {
+  width: 100%;
+  height: 124px;
+}
+
+/* =========================
+    Single Card - Image - Popular
+   ========================= */
+
+.image-popular {
+  width: 120px;
+  height: 120px;
+  border-radius: 1rem 0 0 1rem;
+}
+
+/* =========================
+    Single Card - Content
+   ========================= */
 .card-content {
-  width: 250px;
+  display: grid;
+  position: relative;
+  z-index: 2;
   gap: 8px;
   padding-right: 15px;
   padding-left: 15px;
-  display: grid;
   background-color: transparent;
   padding: 0.5rem;
 }
 
-.hotel-card-title {
+/* =========================
+    Single Card - Content - Elements
+   ========================= */
+.card-title {
   font-weight: 700;
   font-size: 16px;
   line-height: 100%;
@@ -373,7 +457,7 @@ main {
   background-color: transparent;
 }
 
-.hotel-card-price {
+.card-price {
   font-weight: 400;
   font-size: 14px;
   line-height: 100%;
@@ -381,28 +465,14 @@ main {
   background-color: transparent;
 }
 
-.hotel-card-rating {
+.card-rating {
   background-color: transparent;
 }
 
-.fa-star {
+.card-rating i {
   color: var(--main-color);
   background-color: transparent;
 }
-
-/* =========================
-    Hotels - Populars
-   ========================= */
-/* 
-.popular-card {
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  height: 10rem;
-  border-radius: 1.3rem;
-  box-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.1);
-  background: var(--color-white);
-} */
 
 /* =========================
     Hotels - Activities
